# mcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  PLAN_REVIEW.md  README.md
bench/: gen_priors.cpp  tune_quant.cpp  vs_original.cpp
fuzz/: CMakeLists.txt  fuzz_block_decode.cpp  fuzz_chunk_view.cpp  fuzz_roundtrip.cpp
include/mcpp/archive/: archive.hpp  chunk.hpp  layout.hpp  occupancy.hpp  volume_io.hpp
include/mcpp/cache/: block_key.hpp  cache.hpp
include/mcpp/codec/: airfill.hpp  block.hpp  codec.hpp  coef_coder.hpp  component_transform.hpp  convert.hpp  dct.hpp  dct_simd.hpp  dct_tables.hpp  mask_block.hpp  max_error.hpp  quant.hpp  range_coder.hpp  scan.hpp  train.hpp
include/mcpp/coordinator/: coordinator.hpp
include/mcpp/core/: dtype.hpp  error.hpp  fpbits.hpp  mdview.hpp
include/mcpp/geom/: surface.hpp  vec.hpp
include/mcpp/ingest/: ingest.hpp
include/mcpp/mcs/: mcs.hpp
include/mcpp/os/: mmap.hpp
include/mcpp/render/: compositor.hpp  renderer.hpp
include/mcpp/sampling/: sampler.hpp  surface_sample.hpp  volume_view.hpp
include/mcpp/streaming/: byte_source.hpp  streaming_archive.hpp
include/mcpp/test/: test.hpp
tests/: CMakeLists.txt  test_air.cpp  test_archive.cpp  test_archive_os.cpp  test_block.cpp  test_cache.cpp  test_codec.cpp  test_coordinator.cpp  test_dct.cpp  test_dtype.cpp  test_fpbits.cpp  test_ingest.cpp  test_integration.cpp  test_max_error.cpp  test_mcs.cpp  test_mdview.cpp  test_quant.cpp  test_range_coder.cpp  test_render.cpp  test_sampling.cpp  test_streaming.cpp  test_toleration.cpp  test_volume_io.cpp
